objects/tspa__VisualJourneyUsers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tspa__Nortification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Nortification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__UserId__c</fullName>
        <label>UserId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__UserName__c</fullName>
        <label>UserName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Visual Journey Users</label>
</CustomObject>